# tindeq-progressor-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: app.rs  main.rs  progressor.rs
